--- a/index.html
+++ b/index.html
@@ -11,9 +11,34 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+	<nav class="nav">
+		<a href="#inicio" class="logotipo">CIX</a>
+		<ul id="menu" class="menu">
+			<li data-menuanchor="inicio" class="active">
+				<a href="#inicio">Inicio</a>
+			</li>
+			<li data-menuanchor="servicios" class="active">
+				<a href="#servicios">Servicios</a>
+			</li>
+			<li data-menuanchor="contactos" class="active">
+				<a href="#contactos">Contactos</a>
+			</li>
+		</ul>
+	</nav>
     <main id="fullpage">
-        <header class="section">
-			<h1>Header</h1>
+        <header class="section header">
+            <div class="contenedor-titulo">
+                <h1 class="titulo">
+                    <span class="texto-naranja">CIX</span>
+                    <span class="texto-blanco">Broadband</span>
+                </h1>
+                <p class="texto-blanco">
+                    Con CIX ahora Si estaras Conectado!
+                </p>
+            </div>
+            <div class="contenedor-icono">
+                <p><a href="#servicios" class="texto-blanco"><i class="fas fa-chevron-circle-down"></i></a></p>
+            </div>
         </header>
         <section class="section">
             <h1>Productos</h1>
