--- a/index.html
+++ b/index.html
@@ -109,7 +109,12 @@
         </section>
 
         <footer class="section contactos">
-			<h1>Contactos</h1>
+            <h2 class="texto-naranja">Siguenos en Redes sociales</h2>
+            <p class="redes-sociales">
+				<a href="#" class="facebook"><i class="cix-facebook"></i></a>
+				<a href="#" class="twitter"><i class="cix-twitter"></i></a>
+				<a href="#" class="instagram"><i class="cix-instagram"></i></a>
+            </p>
         </footer>
     </main>
 
