adapto el funcionamiento en tlf mobiles, y completada la seccion de quienesomos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/cix-icon.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/flexboxgrid.css">
 </head>
 <body>
     <nav class="nav">
@@ -41,9 +42,6 @@
             </li>
             <li data-menuanchor="contactos" class="active">
                 <a href="#contactos">Contactos</a>
-            </li>
-            <li data-menuanchor="intranet" class="active">
-                <a href="#intranet">Intranet</a>
             </li>
         </ul>
     </nav>
@@ -97,7 +95,46 @@
         </header>
 
         <section class="section quienesomos">
-            <h1>¿ Quienes Somos ?</h1>
+            <div class="container col-lg-12">
+				<div class="row">
+					<div class="box col-xs-12 col-lg-4 col-md-4">
+						<center>
+							<svg class="center rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
+								<title>Placeholder</title>
+								<rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+							</svg>
+						</center>
+						<h1>LA EMPRESA</h1>
+						<p>
+							Cix Broadband Nace en maturin con el proposito de satisfacer las necesidades de comunicacion a la pequeña y media empresa asi tambien a todo usuario, logrando integrar a todos a las nuevas tecnologias de la autopista comunicacional.
+						</p>
+					</div>
+					<div class="box col-xs-12 col-lg-4 col-md-4">
+						<center>
+							<svg class="center rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
+								<title>Placeholder</title>
+								<rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+							</svg>
+						</center>
+						<h1>MISIÓN</h1>
+						<p>
+							Es Brindar un servicio que permita generar un excelente vínculo entre nuestros clientes, priorizando la, ATENCION, RESPONSABILIDAD y CALIDAD.
+						</p>
+					</div>
+					<div class="box col-xs-12 col-lg-4 col-md-4">
+						<center>
+							<svg class="center rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140">
+								<title>Placeholder</title>
+								<rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
+							</svg>
+						</center>
+						<h1>VISIÓN</h1>
+						<p>
+							Ser líderes en proporcionar servicios de redes de datos e información, através de tecnología de punta y con soporte a los servicios relacionados, vamos a ganar el entusiasmo de nuestros clientes mediante la mejora continua.
+						</p>
+					</div>
+				</div>
+            </div>
         </section>
 
         <section class="section servicios">
