--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         </footer>
     </main>
 
+    <script src="js/scrolloverflow.js"></script>
     <script src="js/fullpage.js"></script>
     <script src="js/main.js"></script>
 </body>
