--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bienvenid@s a mi pagina web</title>
+<!--
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Oswald&display=swap" rel="stylesheet">
+-->
     <link rel="stylesheet" href="css/fullpage.css">
     <link rel="stylesheet" href="css/cix-icon.css">
     <link rel="stylesheet" href="css/estilos.css">
@@ -149,13 +151,70 @@
             </div>
         </section>
 
-        <section class="section item3">
-            <h1>Title</h1>
+        <section class="section item3"><br><br>
+			<div>
+				<h1 class="item4-title mb-1" style="text-align: center;">OUR SERVICES</h1>
+				<p class="font-weight-1 mb-2 t-center">Lorem ipsum dolor sit amet.</p>
+			</div>
+			<br>
+			<div class="container col-lg-10 col-md-9 col-sm-12 col-xs-11 mb-2">
+				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="padding: 15px">
+						<h3 class="font-weight-3 text-left mb-1">Air Freight</h3>
+						<p class="font-weight-1 mb-1">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.
+						</p>
+						<p><a href="#"  class="text-orange">Learn More</a></p>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="padding: 15px">
+						<h3 class="font-weight-3 text-left mb-1">Ocean Freight</h3>
+						<p class="font-weight-1 mb-1">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.
+						</p>
+						<p><a href="#"  class="text-orange">Learn More</a></p>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="padding: 15px">
+						<h3 class="font-weight-3 text-left mb-1">Land Transportation</h3>
+						<p class="font-weight-1 mb-1">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.
+						</p>
+						<p><a href="#"  class="text-orange">Learn More</a></p>
+					</div>
+				</div>
+				<br><br>
+				<div class="row">
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="padding: 15px">
+						<h3 class="font-weight-3 text-left mb-1">Air Freight</h3>
+						<p class="font-weight-1 mb-1">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.
+						</p>
+						<p><a href="#"  class="text-orange">Learn More</a></p>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="padding: 15px">
+						<h3 class="font-weight-3 text-left mb-1">Ocean Freight</h3>
+						<p class="font-weight-1 mb-1">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.
+						</p>
+						<p><a href="#"  class="text-orange">Learn More</a></p>
+					</div>
+
+					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="padding: 15px">
+						<h3 class="font-weight-3 text-left mb-1">Land Transportation</h3>
+						<p class="font-weight-1 mb-1">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.
+						</p>
+						<p><a href="#"  class="text-orange">Learn More</a></p>
+					</div>
+				</div>
+			</div>
         </section>
 
 		<section class="section item4">
-			<div class="border-primary">
-				<h1 class="item4-title mb-1" style="text-align: center;">CONTACT US</h1>
+			<div>
+				<h1 class="item4-title mb-1 mt-10" style="text-align: center;">CONTACT US</h1>
 				<p class="font-weight-1 mb-2 t-center">Lorem ipsum dolor sit amet</p>
 			</div>
 			<div class="container col-lg-10 mb-2">
