Menu responsive listo

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             </div>
         </section>
 
-        <section class="section item3"><br><br>
+        <section class="section item3">
 			<div>
-				<h1 class="item4-title mb-1" style="text-align: center;">OUR SERVICES</h1>
+				<h1 class="item4-title mb-1 item3-title" style="text-align: center;">OUR SERVICES</h1>
 				<p class="font-weight-1 mb-2 t-center">Lorem ipsum dolor sit amet.</p>
 			</div>
 			<br>
@@ -213,6 +213,7 @@
         </section>
 
 		<section class="section item4">
+			<br><br><br><br><br><br>
 			<div>
 				<h1 class="item4-title mb-1 mt-10" style="text-align: center;">CONTACT US</h1>
 				<p class="font-weight-1 mb-2 t-center">Lorem ipsum dolor sit amet</p>
